# prism

./: .gitignore  CLAUDE.md  README.md  analyze_heads.py  compare.py  evaluate.py  generate_data.py  generate_data_thick.py  pyproject.toml  train_forward.py  train_inverse.py  train_rlvr.py
baselines/: README.md  diff_tmm.py  eval_optim.py  eval_optogpt.py  handcrafted_designs.json  nn_models.py  optim_baselines.py  optogpt_results.json  train_nn.py
eval_data/44m/head_analysis/: head_analysis.json
eval_data/len_20_10nm/no_scale/epoch29/: metrics.json
nk/: Ag.csv  Ag_HZ.csv  Al.csv  Al2O3.csv  AlN.csv  Al_HZ.csv  Au.csv  Ge.csv  Ge_1.csv  Ge_2.csv  Glass_Substrate.csv  HfO2.csv  HfO2_HZ.csv  ITO.csv  MgF2.csv  MgO.csv  Si.csv  Si3N4.csv  SiO2.csv  Si_Substrate.csv  Ta2O5.csv  TiN.csv  TiO2.csv  TiO2_HZ.csv  ZnO.csv  ZnS.csv  ZnSe.csv
optoformer/: constants.py
optoformer/data/: dataset.py  sim.py
optoformer/eval/: decode.py  metrics.py  targets.py  visualize.py
optoformer/model/: common.py  prefix_material_thk_model.py  prefix_model.py  thickness_embedding_model.py  thickness_rope_model.py  transformer.py
optoformer/training/: reward.py  rlvr.py  train.py
prism/: constants.py
prism/data/: dataset.py  sim.py
prism/eval/: decode.py  targets.py  visualize.py
prism/model/: common.py  prefix_material_thk_model.py  transformer.py
prism/training/: reward.py  rlvr.py  train.py
reports/: 13m_model_evaluation.md  44m_head_analysis.md
scripts/: evaluate.py  generate_data.py  master_eval.sh  train_inverse.py  train_inverse_ddp.py
(+27 files in other folders)
